2004-07-08  Olivier Samyn  <osamyn@easynet.be>

	* docs/C/python.xml: Added the new file selector API to the python binding.
	* src/boards/py-mod-gcompris.c: (pyFileSelectorCallBack),
	(py_gcompris_file_selector_load), (py_gcompris_file_selector_save),
	(py_gcompris_file_selector_stop): Added the new file selector API to the python binding.

2004-07-08  Bruno coudoin  <bruno.coudoin@free.fr>

	* boards/geography/board1_0.xml.in: -A- updated, cleaned the images, better looking maps.
	* boards/geography/board3_0.xml.in: -A-
	* boards/geography/continents/back.png: -A-
	* boards/geography/europe/europe.jpg: -A-
	* boards/geography/europe/europe.png: -A-
	* boards/geography/france_region/bourgogne.png: -A-
	* boards/geography/france_region/bretagne.png: -A-
	* boards/geography/france_region/champagne-ardenne.png: -A-
	* boards/geography/france_region/france-regions.png: -A-
	* boards/geography/france_region/franche-conte.png: -A-
	* boards/geography/france_region/languedoc-roussillon.png: -A-
	* boards/geography/france_region/limousin.png: -A-
	* boards/geography/france_region/lorraine.png: -A-
	* boards/geography/france_region/midi-pyrenees.png: -A-
	* boards/geography/france_region/nord-pas-de-calais.png: -A-
	* boards/geography/france_region/pays-de-la-loire.png: -A-
	* boards/geography/france_region/picardie.png: -A-
	* boards/geography/france_region/poitou-charentes.png: -A-
	* boards/geography/france_region/provence-alpes-cote_d_azur.png: -A-
	* boards/geography/northamerica/north_america.png: -A-
	* boards/geography/southamerica/south_america.png: -A-
	* src/boards/draw.c: (key_press), (image_selected), (load_image),
	(save_image): experimental implementation of the file_selector API
	* src/gcompris/Makefile.am: added file_selector.c
	* src/gcompris/file_selector.c: (gcompris_file_selector_save),
	(gcompris_file_selector_load), (gcompris_file_selector_stop),
	(display_files), (free_stuff), (item_event_file_selector): created on the model ofimage_selector